--- a/produtos.html
+++ b/produtos.html
@@ -1,81 +1,200 @@
-<script>
-// URL do JSON que o admin atualiza no GitHub
-const PROD_URL = "https://raw.githubusercontent.com/PrimeZillaBR/PrimeZillaBR.github.io/main/produtos.json";
+<!doctype html>
+<html lang="pt-BR">
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>Produtos — PrimeZilla</title>
+<link rel="stylesheet" href="style.css">
+</head>
+<body>
+<header class="topo">
+  <div class="brand">
+    <img src="https://res.cloudinary.com/duwsueept/image/upload/ersuwnmpqepkaosb85gf" class="logo" alt="PrimeZilla">
+  </div>
+  <nav class="nav">
+    <a href="index.html">Início</a>
+    <a href="produtos.html" class="ativo">Produtos</a>
+    <a href="admin.html">Admin</a>
+    <a href="contato.html">Contato</a>
+  </nav>
+</header>
+<main class="container">
+  <h2>Produtos</h2>
+  <div class="cats">
+    <button class="catBtn" data-cat="all">Todos</button>
+    <button class="catBtn" data-cat="pods">Pods</button>
+    <button class="catBtn" data-cat="acessorios">Acessórios</button>
+    <button class="catBtn" data-cat="eletronicos">Eletrônicos</button>
+    <button class="catBtn" data-cat="outros">Outros</button>
+  </div>
+  <div id="productsGrid" class="grid">Carregando...</div>
+</main>
+
+<footer class="footer">
+  © 2025 PrimeZilla — SITE CRIADO POR @JHON_LORRAN_
+</footer>
+
+<script type="module">
+import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
+import { getFirestore, collection, query, orderBy, onSnapshot } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js";
+
+const firebaseConfig = {
+  apiKey: "AIzaSyDlzVS8ZkI4bVAmcFyKH1PDojvTXGYXyso",
+  authDomain: "primezilla-70b94.firebaseapp.com",
+  projectId: "primezilla-70b94",
+  storageBucket: "primezilla-70b94.firebasestorage.app",
+  appId: "1:910803172382:web:db82186d77b8281f13020f"
+};
+
 const PHONE = "5567992018672";
 
-const grid = document.getElementById('productsGrid');
-let produtos = [];
+const app = initializeApp(firebaseConfig);
+const db = getFirestore(app);
 
-// Carregar produtos do GitHub JSON
-async function loadProducts() {
-  try {
-    grid.innerHTML = "Carregando...";
-    const res = await fetch(PROD_URL, { cache: "no-store" });
-    if (!res.ok) throw new Error("Erro ao carregar produtos.json");
-    produtos = await res.json();
-    render("all");
-    bindFilters();
-  } catch (err) {
-    console.error(err);
-    grid.innerHTML = "<p>Erro ao carregar produtos.</p>";
-  }
-}
-
-// Segurança HTML
-function esc(s) {
-  return String(s || "").replace(/[&<>\"']/g, m =>
-    ({ "&": "&amp;", "<": "&lt;", ">": "&gt;", "\"": "&quot;", "'": "&#39;" }[m])
+function esc(s){
+  return String(s||'').replace(/[&<>"']/g, m =>
+    ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;'}[m])
   );
 }
 
-// Botões de categoria
-function bindFilters() {
-  document.querySelectorAll(".catBtn").forEach(btn => {
-    btn.onclick = () => render(btn.dataset.cat);
+const grid = document.getElementById('productsGrid');
+const q = query(collection(db, 'products'), orderBy('createdAt', 'desc'));
+
+onSnapshot(q, snap => {
+  const arr = [];
+  snap.forEach(d => arr.push(d.data()));
+  render(arr, 'all');
+  document.querySelectorAll('.catBtn').forEach(btn=>{
+    btn.onclick = () => render(arr, btn.dataset.cat);
   });
-}
+}, err=>{
+  grid.innerHTML = '<p>Erro ao carregar produtos.</p>';
+  console.error(err);
+});
 
-// Renderização
-function render(filter) {
-  grid.innerHTML = "";
+function render(list, filter){
+  grid.innerHTML = '';
+  list.forEach(p=>{
+    if(!p.active) return;
+    if(filter !== 'all' && p.category !== filter) return;
 
-  produtos.forEach(p => {
-    if (!p.active) return;
-    if (filter !== "all" && p.category !== filter) return;
+    const img = p.imageUrl || p.image || 'placeholder.png';
+    const priceText = p.price
+      ? `${p.currency||'R$'} ${Number(p.price).toFixed(2)}`
+      : 'Consultar valores';
 
-    const img = p.imageUrl || p.image || "placeholder.png";
-    const priceText = p.price ? `R$ ${Number(p.price).toFixed(2)}` : "Consultar valores";
-
-    const div = document.createElement("div");
-    div.className = "card";
-    div.innerHTML = `
+    const el = document.createElement('div');
+    el.className = 'card';
+    el.innerHTML = `
       <img src="${esc(img)}" alt="${esc(p.name)}">
       <h3>${esc(p.name)}</h3>
       <p class="price">${esc(priceText)}</p>
       <a class="botao buy">Comprar</a>
     `;
 
-    div.querySelector(".buy").onclick = () => {
-      const variantLabel = p.type === "pod" ? "Sabor" : "Cor";
-      const variant = p.options && p.options[0] ? p.options[0] : "-";
+    el.querySelector('.buy').addEventListener('click',()=>{
+      const variantLabel = (p.type === 'pod') ? 'Sabor' : 'Cor';
+      const variant = (p.options && p.options[0]) ? p.options[0] : '-';
       const text = encodeURIComponent(
-        `Olá! Tenho interesse no produto: ${p.name}
+`Olá! Tenho interesse no produto: ${p.name}
 Quantidade: 1
 ${variantLabel}: ${variant}
 Valor: ${priceText}
 Forma de Pagamento: PIX`
       );
       window.open(`https://wa.me/${PHONE}?text=${text}`, "_blank");
-    };
+    });
 
-    grid.appendChild(div);
+    grid.appendChild(el);
   });
 
-  if (grid.children.length === 0) {
-    grid.innerHTML = "<p>Nenhum item nesta categoria.</p>";
+  if(grid.children.length === 0){
+    grid.innerHTML = '<p>Nenhum item nesta categoria.</p>';
   }
 }
-
-// iniciar
-loadProducts();
 </script>
+
+
+const firebaseConfig = {
+  apiKey: "AIzaSyDlzVS8ZkI4bVAmcFyKH1PDojvTXGYXyso",
+  authDomain: "primezilla-70b94.firebaseapp.com",
+  projectId: "primezilla-70b94",
+  storageBucket: "primezilla-70b94.firebasestorage.app",
+  appId: "1:910803172382:web:db82186d77b8281f13020f"
+};
+
+const PHONE = "5567992018672";
+const app = initializeApp(firebaseConfig);
+const db = getFirestore(app);
+
+// Segurança contra caracteres quebrando HTML
+function esc(s){
+  return String(s||'').replace(/[&<>"']/g, m =>
+    ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;'}[m])
+  );
+}
+
+const grid = document.getElementById('productsGrid');
+const q = query(collection(db, 'products'), orderBy('createdAt', 'desc'));
+
+onSnapshot(q, snap => {
+  const arr = [];
+  snap.forEach(d => arr.push(d.data()));
+  render(arr, 'all');
+
+  document.querySelectorAll('.catBtn').forEach(btn=>{
+    btn.onclick = () => render(arr, btn.dataset.cat);
+  });
+
+}, err=>{
+  grid.innerHTML = '<p>Erro ao carregar produtos.</p>';
+  console.error(err);
+});
+
+function render(list, filter){
+  grid.innerHTML = '';
+  list.forEach(p=>{
+    if(!p.active) return;
+    if(filter !== 'all' && p.category !== filter) return;
+
+    const img = p.imageUrl || p.image || 'placeholder.png';
+    const priceText = p.price
+      ? ${p.currency||'R$'} ${Number(p.price).toFixed(2)}
+      : 'Consultar valores';
+
+    const el = document.createElement('div');
+    el.className = 'card';
+    el.innerHTML = `
+      <img src="${esc(img)}" alt="${esc(p.name)}">
+      <h3>${esc(p.name)}</h3>
+      <p class="price">${esc(priceText)}</p>
+      <a class="botao buy">Comprar</a>
+    `;
+
+    el.querySelector('.buy').addEventListener('click',()=>{
+
+      const variantLabel = (p.type === 'pod') ? 'Sabor' : 'Cor';
+      const variant = (p.options && p.options[0]) ? p.options[0] : '-';
+
+      const text = encodeURIComponent(
+`Olá! Tenho interesse no produto: ${p.name}
+Quantidade: 1
+${variantLabel}: ${variant}
+Valor: ${priceText}
+Forma de Pagamento: PIX`
+      );
+
+      window.open(https://wa.me/${PHONE}?text=${text}, "_blank");
+    });
+
+    grid.appendChild(el);
+  });
+
+  if(grid.children.length === 0){
+    grid.innerHTML = '<p>Nenhum item nesta categoria.</p>';
+  }
+}
+</script>
+
+</body>
+</html>
